[package]
name = "poisson-reconstruction"
version = "0.1.0"
edition = "2021"

authors = ["Can H. Tartanoglu <canhtart@gmail.com"]
keywords = ["surface", "reconstruction", "poisson", "implicit"]

license = "BSD-4"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "poisson_reconstruction"
crate-type = ["cdylib"]

[dependencies]
rayon = "*"

pyo3 = { version = "^0.18.1", features = ["extension-module"] }
numpy = { version = "^0.18.0", features = ["nalgebra"] }

nalgebra = "^0.32.1"
poisson_reconstruction = "^0.2.0"