[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "poisson-reconstruction"
authors = [
  { name="Can H. Tartanoglu", email="canhtart@gmail.com" },
]
requires-python = ">=3.7"
classifiers = [
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux"
]
keywords = ["surface", "reconstruction", "poisson", "implicit"]

dependencies = ["numpy >= 1.16.0"]

[project.urls]
homepage = "https://github.com/caniko/poisson-reconstruction"
repository = "https://github.com/caniko/poisson-reconstruction"

[project.optional-dependencies]
test = ["pytest", "open3d"]

[tool.pytest.ini_options]
env = ["RUST_BACKTRACE=full"]